# HRBF-Skin

./: .gitignore  CMakeLists.txt  NOTES.txt  README.md  bind_HRBF.mel  bind_HRBF_tree.mel
references/: hrbf_core.h
sampling debug/: composition_rest_dev5  hips_HRBF  hips_samples  hrbfSamplesView.py  hrbfValuesView.py  lef_up_leg_samples  left_leg_HRBF  left_leg_downsampled  left_leg_grad_HRBF  left_leg_samples  left_up_leg_samples  neck_downsampled
shaders/: diff.frag.glsl  diff.vert.glsl
src/: CMakeLists.txt  FloatGrid3D.cpp  FloatGrid3D.hpp  HRBFNode.cpp  HRBFNode.h  HelloWorld.cpp  MayaDualQuaternion.cpp  MayaDualQuaternion.h  MayaHRBF.cpp  MayaHRBF.h  MayaHRBFManager.cpp  MayaHRBFManager.h  hrbf3.cpp  hrbf3.hpp  main.cpp  main.hpp
src/geom/: geom.cpp  geom.hpp
src/viewer/: viewer.cpp  viewer.hpp
test_scenes/: beanbag_HRBF.ma  beanbag_clean.ma  gangnam_style.ma  gangnam_style_clean.ma  gangnam_style_clean_DQ.ma  gangnam_style_weights.weightMap  rigged_rectangle.ma  rigged_rectangle_DQ.ma  rigged_rectangle_weights.weightMap
test_scenes/beanbag_weights/: pCube1_joint1.iff  pCube1_joint2.iff  pCube1_joint3.iff  pCube1_joint4.iff
test_scenes/gangnam_style_clean_weights/: MocapGuy_Body_Hips.iff  MocapGuy_Body_LeftArm.iff  MocapGuy_Body_LeftFoot.iff  MocapGuy_Body_LeftForeArm.iff  MocapGuy_Body_LeftHand.iff  MocapGuy_Body_LeftHandIndex1.iff  MocapGuy_Body_LeftHandIndex2.iff  MocapGuy_Body_LeftHandIndex3.iff  MocapGuy_Body_LeftHandMiddle1.iff  MocapGuy_Body_LeftHandMiddle2.iff  MocapGuy_Body_LeftHandMiddle3.iff  MocapGuy_Body_LeftHandPinky1.iff  (+41 more)
(+57 files in other folders)
